# Santa-s-Workshop-Tour

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
models/: individual.py
results/: generate_latex.py
results/comparisons/20250125_123918/: best_result.json  scores.json
results/comparisons/20250129_231225/: best_result.json  scores.json
results/comparisons/20250129_232609/: best_result.json  scores.json
results/comparisons/20250129_233916/: best_result.json  scores.json
results/evolutionary_algorithm/20250113_152854/: assigned_days.csv  best_individuals_fitness_values.csv  fitness_function_value.txt  people_per_day.json  population_statistics.csv  time.txt
results/evolutionary_algorithm/20250113_162810/: assigned_days.csv  best_individuals_fitness_values.csv  fitness_function_value.txt  people_per_day.json  population_statistics.csv  time.txt
results/evolutionary_algorithm/20250113_175113/: assigned_days.csv  best_individuals_fitness_values.csv  fitness_function_value.txt  (+3 more)
results/examples/: heuristic_individual.csv:Zone.Identifier
results_analysis/: compare_results.py  files_io.py  generate_plots.py  results_handler.py  statistics.py
santas_workshop_tour/: compare_results.py  config.py  cost_function.py  data_grabber.py  decorators.py  evolutionary_algorithm.py  files_io.py  hyperparameters.json  individual.py  individual_factory.py  main.py  results_handler.py  statistics.py
santas_workshop_tour/tests/: test_cost_function.py  test_data_grabber.py  test_evolutionary_algorithm.py  test_individual.py  test_individual_factory.py
(+330 files in other folders)
