[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "santas_workshop_tour"
version = "0.0.1"
description = "Kaggle 2019 competition: Santa's Workshop Tour"
authors = [
  { name = "Dominika Boguszewska, Aleksander Szymczyk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["santas_workshop_tour"]
force_sort_within_sections = true
